fix spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,54 +1,49 @@
 html,
 body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
+    height: 100%;
 }
 
-/* Wrapper for page content to push down footer */
 #wrap {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  /* Negative indent footer by it's height */
-  margin: 0 auto -60px;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -60px;
 }
 
-/* Set the fixed height of the footer here */
-#push,
-#footer {
-  height: 60px;
-}
-#footer {
-  background-color: #f5f5f5;
+#push, #footer {
+    height: 60px;
 }
 
-/* Lastly, apply responsive CSS fixes as necessary */
+#footer {
+    background-color: #f5f5f5;
+}
+
 @media (max-width: 767px) {
-  #footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+    #footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 .container {
-  width: auto;
-  max-width: 670px;
+    width: auto;
+    max-width: 670px;
 }
 .container .credit {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 .statistics {
-  /*padding: 28px 0 0 0;*/
+    /*padding: 28px 0 0 0;*/
 }
 .admin-top {
-  position: relative;
-  /*margin: 15px 0;*/
-  padding: 10px 10px 10px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+    position: relative;
+    /*margin: 15px 0;*/
+    padding: 10px 10px 10px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
